# streamlit-turbo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  coverage.xml  justfile  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
docker/: .dockerignore  Dockerfile  docker-compose.yml
src/streamlit_template/: __init__.py
src/streamlit_template/auth/: __init__.py  decorators.py  session.py
src/streamlit_template/components/: __init__.py  charts.py  footer.py  forms.py  header.py  modals.py  sidebar.py
src/streamlit_template/core/: __init__.py  cache_manager.py  config.py  state_manager.py  validators.py
src/streamlit_template/database/: __init__.py  engine.py  models.py
src/streamlit_template/database/migrations/: env.py
src/streamlit_template/monitoring/: __init__.py  analytics.py  logger.py
src/streamlit_template/pages/: __init__.py  admin.py  analytics.py  home.py  settings.py
src/streamlit_template/styles/: __init__.py  components.css  main.css  themes.py
src/streamlit_template/utils/: __init__.py  data_loader.py  decorators.py  helpers.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: test_pages.py
tests/unit/: test_auth.py  test_database.py  test_monitoring.py
